Make the input wider to make sure long numbers are fully visible.

--- a/app/public/assets/css/general.css
+++ b/app/public/assets/css/general.css
@@ -7,6 +7,6 @@ form[name="serie"] #serie_serie div.form-group label {
     display: none;
 }
 form[name="serie"] #serie_serie div.form-group {
-    width: 110px;
+    width: 150px;
     float: left;
 }
